--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
 version: "3.9"
+# networks:
+#   name: kafka-net
+#   driver: bridge
 
 services:
   zookeeper:
@@ -6,12 +9,15 @@ services:
     image: wurstmeister/zookeeper
     ports:
       - "2181:2181"
-
+    # networks:
+    #   - kafka-net
   kafka:
     container_name: kafka
     image: wurstmeister/kafka
     ports:
       - "9092:9092"
+    # networks:
+    #   - kafka-net
     volumes:
       - ./data/kafka:/var/run/docker.sock
     environment:
@@ -31,13 +37,11 @@ services:
       - POSTGRES_PASSWORD=12345
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
-
+  
   admin:
     container_name: admin
     build: ./admin
     image: mohamednaguib22/admin
-    # volumes:
-    #   - ./admin:/app
     ports:
       - "3001:3000"
     environment:
@@ -68,5 +72,6 @@ services:
       - postgres
       - kafka
       - admin
-
+# volumes:
+#   postgres_data: {}
 
