--- a/user/package.json
+++ b/user/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "express": "^4.18.2",
     "kafka-node": "^5.0.0",
     "kafkajs": "^2.2.4",
